# ai-usage-measurement-framework

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  main.py  pyproject.toml
src/ai_usage_measurement_framework/: __init__.py  cli.py  models.py  patterns.py
src/ai_usage_measurement_framework/analyzers/: __init__.py  git_analyzer.py  github_analyzer.py
src/ai_usage_measurement_framework/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/ai_usage_measurement_framework/webapp/: app.py
