[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_usage_measurement_framework"]

[project]
name = "ai-usage-measurement-framework"
version = "0.1.0"
description = "Measure and analyze AI-assisted development in git repositories"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Usage Measurement Framework Contributors"}
]
keywords = ["ai", "git", "analytics", "copilot", "development", "metrics", "github", "windsurf", "cursor", "measurement", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-usage-measurement-framework = "ai_usage_measurement_framework.cli:app"

[project.urls]
Homepage = "https://github.com/ai-usage-measurement-framework/ai-usage-measurement-framework"
Documentation = "https://github.com/ai-usage-measurement-framework/ai-usage-measurement-framework#readme"
Repository = "https://github.com/ai-usage-measurement-framework/ai-usage-measurement-framework"
Issues = "https://github.com/ai-usage-measurement-framework/ai-usage-measurement-framework/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
